chore: upgrade to Java 17, JUnit 5, and Kafka 4.0.2 base image
Signed-off-by: Joel Hanson <17215044+Joel-hanson@users.noreply.github.com>